...
        <Text style={[typography('body'), fontWeight('bold'), { color: theme.colors.text }]}>
          {(account?.country_code || '') + ' ' + (account?.mobile || '')}
        </Text>
      </View>

      <TouchableOpacity
        testID="otp-send-button"
        style={[
          styles.primaryButton,
          {
            backgroundColor: isSending || isActive ? theme.colors.border : theme.colors.primary,
            borderRadius: borderRadius.xl,
          },
...
